--- a/src/ui/upload.html
+++ b/src/ui/upload.html
@@ -11,7 +11,7 @@
     <h1>Edit Images</h1>
     <div id="item-info"></div>
     <table id="config-matrix"></table>
-    <button onclick="window.location.href='index.html'">Back to List</button>
+    <button data-cy="back-to-list" onclick="window.location.href='index.html'">Back to List</button>
   </div>
   <script src="upload.js"></script>
 </body>
